welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:10: error: expected class or object definition
for (t <- 1 to 4)
^MethodsDogHouse:11: error: expected class or object definition
      {dogHouse();
      ^MethodsDogHouse:23: error: expected start of definition
	override def run() {
                 ^MethodsDogHouse:54: error: Unmatched closing brace '}' ignored here
}
^